fix font-size, position small search icon

--- a/src/style.css
+++ b/src/style.css
@@ -22,6 +22,7 @@ body {
 }
 
 .forms__input {
+  font-size: 18px;
   width: 100%;
   height: 70px;
   background-image: url(./images/Search.svg);
@@ -66,4 +67,15 @@ body {
 
 .forms__input--small {
   height: 42px;
+  padding: 0 15px 0 33px;
+  background-position: 13px center;
+  background-size: 11px;
+  font-size: 16px;
+}
+
+.forms__input--small:focus {
+  background-image: url(./images/Search.svg);
+  background-repeat: no-repeat;
+  background-position: 13px center;
+  background-size: 11px;
 }
